syntax = "proto3";
package comdex.asset.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/asset/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message ExtendedPairVault {
    uint64 id = 1;
    uint64 app_mapping_id   = 2 [(gogoproto.moretags) = "yaml:\"app_mapping_id\""];
    uint64 pair_id           = 3 [(gogoproto.moretags) = "yaml:\"pair_id\""];
    string liquidation_ratio = 4 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false,
      (gogoproto.moretags)   = "yaml:\"liquidation_ratio\""
    ];
    string stability_fee        = 5 [ 
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"stability_fee\"" 
    ];
    string closing_fee          = 6 [ 
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"closing_fee\"" 
    ];

    string liquidation_penalty  = 7 [ 
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false,
      (gogoproto.moretags) = "yaml:\"liquidation_penalty\"" 
    ];
    string draw_down_fee         = 8 [ 
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"draw_down_fee\"" ];
    
    bool is_vault_active        = 9 [ (gogoproto.moretags) = "yaml:\"active_flag\"" ];
    string debt_ceiling         = 10[ 
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"debt_ceiling\"" ];
    string debt_floor           = 11 [ 
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"debt_floor\""
    ];
    bool is_psm_pair            = 12[ (gogoproto.moretags) = "yaml:\"is_psm_pair\"" ];
    
    string min_cr               = 13 [ 
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"min_cr\"" 
    ];

    string pair_name            = 14 [ (gogoproto.moretags) = "yaml:\"pair_name\"" ];
    bool asset_out_oracle_price = 15 [ (gogoproto.moretags) = "yaml:\"asset_out_oracle_price\"" ];
    uint64 asset_out_price     = 16 [ 
    (gogoproto.moretags) = "yaml:\"asset_out_price\"" ];
    uint64 min_usd_value_left = 17 [ 
    (gogoproto.moretags) = "yaml:\"min_usd_value_left\"" ];

  }