
syntax = "proto3";
package comdex.vault.v1beta1;

import "gogoproto/gogo.proto";

option go_package            = "github.com/comdex-official/comdex/x/vault/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message MsgCreateRequest {
  string from    = 1 [ (gogoproto.moretags) = "yaml:\"from\"" ];
  uint64 app_mapping_id   = 2 [(gogoproto.moretags) = "yaml:\"app_mapping_id\""];
  uint64 extended_pair_vault_id = 3 [
    (gogoproto.customname) = "ExtendedPairVaultID",
    (gogoproto.moretags)   = "yaml:\"extended_pair_vault_id\""
  ];
  string amount_in = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount_in\"",
    (gogoproto.nullable)   = false
  ];
  string amount_out = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount_out\"",
    (gogoproto.nullable)   = false
  ];
}

message MsgCreateResponse {}

message MsgDepositRequest {
  string from = 1 [ (gogoproto.moretags) = "yaml:\"from\"" ];
  uint64 app_mapping_id   = 2 [(gogoproto.moretags) = "yaml:\"app_mapping_id\""];
  uint64 extended_pair_vault_id = 3 [
    (gogoproto.customname) = "ExtendedPairVaultID",
    (gogoproto.moretags)   = "yaml:\"extended_pair_vault_id\""
  ];
  string userVaultid   = 4
      [ (gogoproto.customname) = "UserVaultID", (gogoproto.moretags) = "yaml:\"userVaultid\"" ];
  string amount = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount\"",
    (gogoproto.nullable)   = false
  ];
}

message MsgDepositResponse {}

message MsgWithdrawRequest {
  string from = 1 [ (gogoproto.moretags) = "yaml:\"from\"" ];
  uint64 app_mapping_id   = 2 [(gogoproto.moretags) = "yaml:\"app_mapping_id\""];
  uint64 extended_pair_vault_id = 3 [
    (gogoproto.customname) = "ExtendedPairVaultID",
    (gogoproto.moretags)   = "yaml:\"extended_pair_vault_id\""
  ];
  string userVaultid   = 4
      [ (gogoproto.customname) = "UserVaultID", (gogoproto.moretags) = "yaml:\"userVaultid\"" ];
  string amount = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount\"",
    (gogoproto.nullable)   = false
  ];
}

message MsgWithdrawResponse {}

message MsgDrawRequest {
  string from = 1 [ (gogoproto.moretags) = "yaml:\"from\"" ];
  uint64 app_mapping_id   = 2 [(gogoproto.moretags) = "yaml:\"app_mapping_id\""];
  uint64 extended_pair_vault_id = 3 [
    (gogoproto.customname) = "ExtendedPairVaultID",
    (gogoproto.moretags)   = "yaml:\"extended_pair_vault_id\""
  ];
  string userVaultid   = 4
      [ (gogoproto.customname) = "UserVaultID", (gogoproto.moretags) = "yaml:\"userVaultid\"" ];
  string amount = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount\"",
    (gogoproto.nullable)   = false
  ];
}

message MsgDrawResponse {}

message MsgRepayRequest {
  string from = 1 [ (gogoproto.moretags) = "yaml:\"from\"" ];
  uint64 app_mapping_id   = 2 [(gogoproto.moretags) = "yaml:\"app_mapping_id\""];
  uint64 extended_pair_vault_id = 3 [
    (gogoproto.customname) = "ExtendedPairVaultID",
    (gogoproto.moretags)   = "yaml:\"extended_pair_vault_id\""
  ];
  string userVaultid   = 4
      [ (gogoproto.customname) = "UserVaultID", (gogoproto.moretags) = "yaml:\"userVaultid\"" ];
  string amount = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount\"",
    (gogoproto.nullable)   = false
  ];
}

message MsgRepayResponse {}

message MsgCloseRequest {
  string from = 1 [ (gogoproto.moretags) = "yaml:\"from\"" ];
  uint64 app_mapping_id   = 2 [(gogoproto.moretags) = "yaml:\"app_mapping_id\""];
  uint64 extended_pair_vault_id = 3 [
    (gogoproto.customname) = "ExtendedPairVaultID",
    (gogoproto.moretags)   = "yaml:\"extended_pair_vault_id\""
  ];
  string userVaultid   = 4
      [ (gogoproto.customname) = "UserVaultID", (gogoproto.moretags) = "yaml:\"userVaultid\"" ];
}

message MsgCloseResponse {}

service MsgService {
  rpc MsgCreate(MsgCreateRequest) returns (MsgCreateResponse);
  rpc MsgDeposit(MsgDepositRequest) returns (MsgDepositResponse);
  rpc MsgWithdraw(MsgWithdrawRequest) returns (MsgWithdrawResponse);
  rpc MsgDraw(MsgDrawRequest) returns (MsgDrawResponse);
  rpc MsgRepay(MsgRepayRequest) returns (MsgRepayResponse);
  rpc MsgClose(MsgCloseRequest) returns (MsgCloseResponse);
}
